@@ -4,18 +4,20 @@ import com.example.demo.Model.Budget;
 import com.example.demo.Model.User;
 import com.example.demo.Model.UserBudget;
 import com.example.demo.Repository.UserBudgetRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
 import javax.transaction.Transactional;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class UserBudgetService {
 
-    @Autowired
-    private UserBudgetRepository userBudgetRepository;
+    private final UserBudgetRepository userBudgetRepository;
+
+    public UserBudgetService(UserBudgetRepository userBudgetRepository) {
+        this.userBudgetRepository = userBudgetRepository;
+    }
 
     public UserBudget save(UserBudget userBudget) {
         return userBudgetRepository.save(userBudget);
@@ -26,10 +28,9 @@ public class UserBudgetService {
     }
 
     public List<UserBudget> findByUser(User user) {
-        return userBudgetRepository.findAll()
-                .stream()
+        return userBudgetRepository.findAll().stream()
                 .filter(ub -> ub.getUser().equals(user))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public UserBudget linkUserToBudget(User user, Budget budget) {
